--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,11 +1,13 @@
+@import 'normalize.css';
+
 :root {
-	--light-gray: #fafafa;
+	--dark: #111;
 }
 
 html, body {
 	width: 100%;
 	height: 100%;
-	background: var(--light-gray);
+	background: var(--dark);
 	font-family: helvetica, sans-seif;
 }
 
@@ -143,7 +145,7 @@ input[type='range']::-webkit-slider-thumb {
     &:hover {
         background: #333;
     }
-    & :active {
+    &:active {
         background: #555;
     }
     & .active {
@@ -172,7 +174,7 @@ input[type='range']::-webkit-slider-thumb {
 
 .hot-cue {
     display: none;
-    @media (min-width: 870px) {
+    @media (min-width: 740px) {
         flex: 2;
         display: block;
         margin-left: 1em;
@@ -184,7 +186,7 @@ input[type='range']::-webkit-slider-thumb {
 
 .loop {
     flex: 2;
-    @media (min-width: 870px) {
+    @media (min-width: 740px) {
         flex: 1;
     }
     & .btn-group {
@@ -194,4 +196,21 @@ input[type='range']::-webkit-slider-thumb {
 
 .clearfix {
     overflow: hidden;
+}
+
+.table {
+	width: 100%;
+	background: #333;
+	color: white;
+	font-size: 12px;
+	& td {
+		padding: 5px 1em;
+		background: #111;
+	}
+	& tbody tr:nth-of-type(odd) td {
+		background: #151515;
+	}
+	& thead td {
+		background: #333;
+	}
 }
