--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -20,10 +20,15 @@ body {
 }
 
 .decks {
-	overflow: hidden;
-	& .player {
-		width: 50%;
-		float: left;
+	display: flex;
+}
+
+.mixer {
+	display: flex;
+	& .slider {
+		top: 50px;
+		left: 35px;
+    	position: relative;
 	}
 }
 
@@ -190,7 +195,6 @@ input[type='range']::-webkit-slider-thumb {
 .hot-cue {
     display: none;
     @media (min-width: 740px) {
-        flex: 2;
         display: block;
         margin-left: 1em;
     }
@@ -211,6 +215,12 @@ input[type='range']::-webkit-slider-thumb {
 
 .clearfix {
     overflow: hidden;
+}
+
+.fader {
+	background: #222;
+	padding: 2em 0;
+	text-align: center;
 }
 
 .table {
