--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -100,6 +100,24 @@ body {
 	& > wave {
         margin-top: 2.2rem;
     }
+
+	&.loading {
+		position: relative;
+
+		&:before {
+			content: 'Loading...';
+			position: absolute;
+			font-size: 1em;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: auto;
+			color: white;
+			opacity: 0.5;
+			line-height: 14;
+			text-align: center;
+		}
+	}
 }
 
 .tempo {
