--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -21,16 +21,17 @@ body {
 
 .decks {
 	display: flex;
+	align-items: center;
+
+	& .player-with-controls:nth-of-type(even) {
+		& .mixer {
+			order: -1
+		}
+	}
 }
 
-.mixer {
+.player-with-controls {
 	display: flex;
-	background: #222;
-	& .slider {
-		top: 50px;
-		left: 35px;
-    	position: relative;
-	}
 }
 
 .player {
@@ -39,6 +40,30 @@ body {
     overflow: hidden;
 	font-size: 14px;
 	width: 100%;
+}
+
+.mixer {
+	background: #222;
+	width: 70px;
+	& .slider {
+		width: 290px;
+		top: 55px;
+		left: -37px;
+    	position: relative;
+	}
+
+	& input[type='range']::-webkit-slider-thumb {
+	    appearance: none !important;
+	    background: linear-gradient(left,
+	    white 0%,
+	    white 44%,
+	    black 44%,
+	    black 54%,
+	    white  54%,
+	    white  100%);
+	    height:54px;
+	    width:30px;
+	}
 }
 
 .header {
@@ -105,7 +130,7 @@ body {
 		position: relative;
 
 		&:before {
-			content: 'Loading...';
+			content: 'Analyzing...';
 			position: absolute;
 			font-size: 1em;
 			top: 0;
@@ -231,6 +256,24 @@ input[type='range']::-webkit-slider-thumb {
 	background: #222;
 	padding: 1.5em 0;
 	text-align: center;
+
+	& input[type='range']::-webkit-slider-thumb {
+	    appearance: none !important;
+	    background: linear-gradient(left,
+	    white 0%,
+	    white 44%,
+	    black 44%,
+	    black 54%,
+	    white  54%,
+	    white  100%);
+	    height:54px;
+	    width:30px;
+	}
+}
+
+.table-wrapper {
+	height: calc(100vh - 372px);
+	overflow-y: scroll;
 }
 
 .table {
