Deconstruct state and props

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -278,6 +278,8 @@ input[type='range']::-webkit-slider-thumb {
 .soundcloud {
 	float: right;
 	margin-top: -10px;
+	position: relative;
+	left: -10px;
 }
 
 .table-wrapper {
