Add hover row to table styles

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -308,6 +308,9 @@ input[type='range']::-webkit-slider-thumb {
 	& tbody tr:nth-of-type(odd) td {
 		background: #151515;
 	}
+	& tbody tr:hover td {
+		background: #222;
+	}
 	& thead td {
 		background: #333;
 	}
