--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -73,6 +73,7 @@ body {
     width: 48px;
     height: 48px;
     background: #555;
+	background: linear-gradient(to top, #555, #999);
 }
 
 .deck {
