--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -251,7 +251,7 @@ input[type='range']::-webkit-slider-thumb {
 
 .fader {
 	background: #222;
-	padding: 1.5em 1em;
+	padding: 1em;
 	display: flex;
 	align-items: center;
 
@@ -273,23 +273,37 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 .search {
+	font-weight: 300;
+	font-size: 12px;
 	& input {
-		background: none;
-		border: 2px solid #333;
-		border-radius: 2px;
-		padding: .5em;
+		background: #333;
+		border: 0;
+		border-radius: 2px 0 0 2px;
+		padding: .75em;
 		color: white;
+		outline: 0;
+
+		&:focus {
+			background: #444;
+		}
 	}
 	& button {
-		background: none;
+		background: #333;
 		color: white;
 		border: 0;
+		padding: 0.75em 1em;
+		border-radius: 0 2px 2px 0;
+		margin-left: 1px;
+
+		&:hover, &:focus {
+			background: #444;
+		}
 	}
 }
 
 .soundcloud {
 	float: right;
-	margin-top: -10px;
+	margin-top: -5px;
 }
 
 .table-wrapper {
