--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -335,6 +335,21 @@ input[type='range']::-webkit-slider-thumb {
 	& thead td {
 		background: #333;
 	}
+	& button {
+		background: #9eacad;
+	    border: 0;
+	    border-radius: 2px;
+	    line-height: 1;
+	    padding: 2px;
+		cursor: pointer;
+		width: 45%;
+		&:hover, &:focus {
+			background: #ccc;
+		}
+		&:active {
+			background: aqua;
+		}
+	}
 }
 
 .artwork-strip {
