--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -367,3 +367,8 @@ input[type='range']::-webkit-slider-thumb {
 .muted {
     opacity: .7;
 }
+
+/* Forms */
+input[disabled] {
+	cursor: not-allowed;
+}
