--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,6 +19,7 @@ body {
 	font-size: 16px;
 }
 
+/* Players */
 .decks {
 	display: flex;
 	align-items: center;
@@ -160,16 +161,12 @@ input[type='range'] {
     height: 3px;
     width: 199px;
     outline: 0;
-}
-input[type='range']::-webkit-slider-thumb {
-    appearance: none !important;
-    background: linear-gradient(to left,
-    rgba(101,101,101,1)44%,
-    rgba(255,255,255,1) 44%,
-    rgba(255,255,255,1) 54%,
-    rgba(101,101,101,1) 54%);
-    height:54px;
-    width:20px;
+	&::-webkit-slider-thumb {
+	    appearance: none !important;
+	    background: linear-gradient(to left, #656565 44%, white 44%, white 54%, #656565 54%);
+	    height:54px;
+	    width:20px;
+	}
 }
 
 .footer {
@@ -246,10 +243,8 @@ input[type='range']::-webkit-slider-thumb {
     }
 }
 
-.clearfix {
-    overflow: hidden;
-}
 
+/* Xfader row */
 .fader {
 	background: #222;
 	padding: 1em;
@@ -312,6 +307,8 @@ input[type='range']::-webkit-slider-thumb {
 	margin-top: -5px;
 }
 
+
+/* Tracks table */
 .table-wrapper {
 	height: calc(100vh - 372px);
 	overflow-y: scroll;
@@ -365,7 +362,11 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 
-/* helpers */
+/* Helpers */
+.clearfix {
+    overflow: hidden;
+}
+
 .text-right {
     text-align: right;
 }
@@ -374,7 +375,6 @@ input[type='range']::-webkit-slider-thumb {
     opacity: .7;
 }
 
-/* Forms */
 input[disabled] {
 	cursor: not-allowed;
 }
