--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -169,7 +169,10 @@ body {
 		border: 0;
 		cursor: pointer;
 		outline: 0;
-		opacity: 0.5;
+		opacity: .5;
+		&:hover {
+			opacity: 1;
+		}
 	}
 }
 
