--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -221,7 +221,8 @@ input[type='range'] {
     background:#000;
     height: 3px;
     width: 199px;
-    outline: 0;
+	outline: 0;
+	display: inline-block;
 	&::-webkit-slider-thumb {
 		appearance: none !important;
 		background: linear-gradient(to left, #656565 44%, white 44%, white 54%, #656565 54%);
@@ -451,8 +452,8 @@ input[type='range'] {
 }
 
 .artwork-strip {
-	width: 100%;
-	height: 15px;
+	width: 30px;
+	height: 30px;
 	background-position: center;
 	background-size: cover;
 }
