--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -42,6 +42,11 @@ body {
     overflow: hidden;
 	font-size: 14px;
 	width: 100%;
+	outline: 0;
+	border:3px solid #9eacad;
+	&:focus {
+		border-color: #00ffec;
+	}
 }
 
 input[type=range]::-moz-range-track {
